--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -17,6 +17,10 @@
     display: none !important;
   }
   .pos-label {
+    border: none !important;
+  }
+
+  main[class] {
     border: none;
   }
 }
